--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -128,6 +128,8 @@ body {
   margin-top: 16px !important;
 }
 
+/*
+
 .col-lg-8-7 {
   @media (min-width: 992px) {
     flex: 0 0 auto !important;
@@ -181,6 +183,7 @@ body {
     margin-top: 16px !important;
   }
 }
+*/
 
 @media (min-width: 992px) {
   .btn-padding-right {
