Thay đổi icon không có dữ liệu & fix bug giao diện màn hđ mẫu, kiểm tra chữ ký số, quản lý thư mục

--- a/src/app/main/check-sign-digital/check-sign-digital.component.scss
+++ b/src/app/main/check-sign-digital/check-sign-digital.component.scss
@@ -1,7 +1,8 @@
 .btn_submit{
     border: 0px;
     border-radius: 5px;
-    height: 33px;
+    height: 42px;
+    width: 170px;
     box-sizing: border-box;
     color: white;
     background-color: #0041C4;
