--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -212,7 +212,7 @@
       </div>
       <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
           <div style="display: table-cell;vertical-align: middle;">
-              <img src="../../../assets/img/empty_data.svg" />
+              <img src="../../../assets/img/no_data.svg" />
               <div style="color: #94A7C6">{{'no.data' | translate}}</div>
           </div>
       </div>
@@ -523,7 +523,7 @@
 
         <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
             <div style="display: table-cell;vertical-align: middle;">
-                <img src="../../../assets/img/empty_data.svg" />
+                <img src="../../../assets/img/no_data.svg" />
                 <div style="color: #94A7C6">{{'no.data' | translate}}</div>
             </div>
         </div>
@@ -748,7 +748,7 @@
       </div>
       <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
           <div style="display: table-cell;vertical-align: middle;">
-              <img src="../../../assets/img/empty_data.svg" />
+              <img src="../../../assets/img/no_data.svg" />
               <div style="color: #94A7C6">{{'no.data' | translate}}</div>
           </div>
       </div>
@@ -987,7 +987,7 @@
         </div>
         <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
             <div style="display: table-cell;vertical-align: middle;">
-                <img src="../../../assets/img/empty_data.svg" />
+                <img src="../../../assets/img/no_data.svg" />
                 <div style="color: #94A7C6">{{'no.data' | translate}}</div>
             </div>
         </div>
@@ -1206,7 +1206,7 @@
           </div>
           <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
               <div style="display: table-cell;vertical-align: middle;">
-                  <img src="../../../assets/img/empty_data.svg" />
+                  <img src="../../../assets/img/no_data.svg" />
                   <div style="color: #94A7C6">{{'no.data' | translate}}</div>
               </div>
           </div>
@@ -1409,7 +1409,7 @@
             </div>
             <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
                 <div style="display: table-cell;vertical-align: middle;">
-                    <img src="../../../assets/img/empty_data.svg" />
+                    <img src="../../../assets/img/no_data.svg" />
                     <div style="color: #94A7C6">{{'no.data' | translate}}</div>
                 </div>
             </div>
@@ -1598,7 +1598,7 @@
           </div>
           <div *ngIf="pageTotal == 0" style="min-height: 65vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
               <div style="display: table-cell;vertical-align: middle;">
-                  <img src="../../../assets/img/empty_data.svg" />
+                  <img src="../../../assets/img/no_data.svg" />
                   <div style="color: #94A7C6">{{'no.data' | translate}}</div>
               </div>
           </div>
