--- a/src/app/main/role/role.component.html
+++ b/src/app/main/role/role.component.html
@@ -58,7 +58,7 @@
   <div *ngIf="list.length == 0" 
   style="min-height: 77vh;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
     <div style="display: table-cell;vertical-align: middle;">
-      <img src="../../../assets/img/empty_data.svg"/>
+      <img src="../../../assets/img/no_data.svg"/>
       <div style="color: #94A7C6">{{'no.data' | translate}}</div>
     </div>
   </div>
