--- a/src/app/main/check-sign-digital/check-sign-digital.component.html
+++ b/src/app/main/check-sign-digital/check-sign-digital.component.html
@@ -44,7 +44,7 @@
 <div *ngIf="totalRecord == 0" 
   style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
     <div style="display: table-cell;vertical-align: middle;"> 
-      <img src="../../../assets/img/empty_data.svg"/>
+      <img src="../../../assets/img/no_data.svg"/>
       <div style="color: #94A7C6">{{'sign.file.no' | translate}}</div>
     </div>
   </div>
