--- a/src/app/main/contract-folder/contract-folder.component.html
+++ b/src/app/main/contract-folder/contract-folder.component.html
@@ -20,9 +20,9 @@
   </div>
   <div style="display: flex">
     <div class="cod-md-1" style="padding-top: 20px">
-      <button class="btn btn-lg btn-block btn_submit" (click)="addFolder()">Thêm thư mục</button>
+      <button class="btn btn-lg btn-block btn_submit" (click)="addFolder()">{{'folder.add' | translate}}</button>
     </div>
-    <div class="cod-md-1" style="padding-top: 20px">
+    <div class="cod-md-1" style="padding-top: 20px;margin-left: 23px;">
       <button (click)="multiDelete('multiDelete')" class="btn btn-lg btn-block btn_submit">{{'btn.multi.delete'|translate}}</button>
     </div>
   </div>
@@ -96,7 +96,7 @@
   <div *ngIf="foldersData && foldersData.length == 0" 
   style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
     <div style="display: table-cell;vertical-align: middle;">
-      <img src="../../../assets/img/empty_data.svg"/>
+      <img src="../../../assets/img/no_data.svg"/>
       <div style="color: #94A7C6">{{'no.data' | translate}}</div>
     </div>
   </div>
@@ -252,7 +252,7 @@
       <div *ngIf="foldersData && foldersData.length == 0" 
       style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
         <div style="display: table-cell;vertical-align: middle;">
-          <img src="../../../assets/img/empty_data.svg"/>
+          <img src="../../../assets/img/no_data.svg"/>
           <div style="color: #94A7C6">{{'no.data' | translate}}</div>
         </div>
       </div>
