--- a/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.html
@@ -100,7 +100,7 @@
   
           <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;padding-top: 50px;">
               <div style="display: table-cell;vertical-align: middle;">
-                  <img src="../../../assets/img/empty_data.svg" />
+                  <img src="../../../assets/img/no_data.svg" />
                   <div style="color: #94A7C6">{{'no.data' | translate}}</div>
               </div>
           </div>
