--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -992,7 +992,7 @@
     <div *ngIf="pageTotal == 0 && !(this.typeDisplay == 'signMany' || this.typeDisplay == 'viewMany')"
       [ngStyle]="{'min-height': filter_status != -1 ? '66vh' : '71vh', 'display': 'table', 'top': '0', 'left': '0', 'width': '100%', 'text-align': 'center'}">
       <div style="display: table-cell; vertical-align: middle;">
-          <img src="../../../assets/img/empty_data.svg" />
+          <img src="../../../assets/img/no_data.svg" />
           <div style="color: #94A7C6">{{'no.data' | translate}}</div>
       </div>
     </div>
