--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -165,7 +165,7 @@
             <div *ngIf="totalCreate == 0"
               style="height:500px;display: table;top: 0;left: 0;width: 100%;text-align: center;">
               <div style="display: table-cell;vertical-align: middle;">
-                <img src="../../../assets/img/empty_data.svg"/>
+                <img src="../../../assets/img/no_data.svg"/>
                 <div style="color: #94A7C6;">{{'no.data' | translate}}</div>
               </div>
             </div>
