--- a/src/app/main/notification/notification.component.html
+++ b/src/app/main/notification/notification.component.html
@@ -42,7 +42,7 @@
     <div *ngIf="listNotification.length == 0"
     style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
       <div style="display: table-cell;vertical-align: middle;">
-        <img src="../../../assets/img/empty_data.svg"/>
+        <img src="../../../assets/img/no_data.svg"/>
         <div style="color: #94A7C6">{{'no.data' | translate}}</div>
       </div>
     </div>
