--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -11,11 +11,11 @@
   margin-top: 12px;
 }
 
-// .item_contract:hover{
-  // background-color: rgb(255, 254, 254);
-  // box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10);
-  // border: 1px solid #C3D7FF;
-// }
+.item_contract:hover{
+  background-color: rgb(255, 254, 254);
+  box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10);
+  border: 1px solid #C3D7FF;
+}
 
 .item_contract_name {
   font-weight: 700;
